add endpoint study planner
