# src/app.js
@@ -8,6 +8,7 @@ import authRoute from "./routes/authRoute.js";
 import passwordResetRoute from "./routes/passwordResetRoute.js";
 import profileRoute from "./routes/profileRoute.js";
 import taskRoute from "./routes/taskRoute.js";
+import studyPlaner from "./routes/studyPlanerRoute.js";
 
 dotenv.config();
 
@@ -34,6 +35,7 @@ app.use("/auth", authRoute);
 app.use("/forgot-password", passwordResetRoute);
 app.use("/profiles", profileRoute);
 app.use("/task", taskRoute);
+app.use("/study-planner", studyPlaner);
 
 app.use("/swagger", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
