# src/docs/swagger.json
@@ -26,6 +26,9 @@
     },
     {
       "name": "Task"
+    },
+    {
+      "name": "Study Planner"
     }
   ],
   "paths": {
@@ -302,6 +305,7 @@
                     "pattern": "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$",
                     "example": "08:00"
                   },
+                  "progres": { "type": "integer" },
                   "prioritas": {
                     "type": "string",
                     "enum": ["tinggi", "sedang", "rendah"]
@@ -315,6 +319,7 @@
                   "task_name",
                   "deadline_date",
                   "deadline_time",
+                  "progres",
                   "prioritas",
                   "status"
                 ]
@@ -375,6 +380,7 @@
                     "pattern": "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$",
                     "example": "08:00"
                   },
+                  "progres": { "type": "integer" },
                   "prioritas": {
                     "type": "string",
                     "enum": ["tinggi", "sedang", "rendah"]
@@ -388,6 +394,7 @@
                   "task_name",
                   "deadline_date",
                   "deadline_time",
+                  "progres",
                   "prioritas",
                   "status"
                 ]
@@ -413,6 +420,61 @@
         ],
         "responses": {
           "200": { "description": "Task deletion successful." }
+        }
+      }
+    },
+    "/study-planner": {
+      "post": {
+        "tags": ["Study Planner"],
+        "summary": "Generate study planner with AI",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "startTime": {
+                    "type": "string",
+                    "format": "time",
+                    "pattern": "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$",
+                    "example": "08:00"
+                  }
+                },
+                "required": ["startTime"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": { "description": "Schedule successfully created by AI." }
+        }
+      },
+      "get": {
+        "tags": ["Study Planner"],
+        "summary": "Get all schedule by user ID",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok." }
+        }
+      }
+    },
+    "/study-planner/{id}": {
+      "delete": {
+        "tags": ["Study Planner"],
+        "summary": "Delete study planner by ID",
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": { "description": "Study Planner deletion successful." }
         }
       }
     }
